# Fukai

./: .dockerignore  .gitignore  .prettierignore  README.md  README_CRAWL_API.md  app.db  celery_worker.py  eslint.config.mjs  jest.config.js  jest.setup.js  main.py  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run_server.py  start-frontend.sh  test-integration.sh  test_crawler.py  tsconfig.json
backend/: .coverage  Dockerfile  README.md  app.db  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements-core.txt  requirements-test.txt  requirements.txt  requirements_temp.txt  run_tests.py  search_rag_dev.db  test_crawl_demo.py
backend/alembic/versions/: 993339c69a68_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: api.py  router.py
backend/app/config/: __init__.py  database.py  settings.py
backend/app/core/: bs4_gspread.py  config.py  database.py  dependencies.py  dependency_injection.py  events.py  exceptions.py  logging.py  middleware.py  rate_limiting.py  security.py
backend/app/domains/auth/: __init__.py  auth_interface.py  auth_service.py
backend/app/domains/crawler/: __init__.py  base_crawler.py  crawl_service.py  crawler.py
backend/app/domains/documents/: __init__.py  pdf_processor.py
backend/app/domains/search/: __init__.py  embedding_service.py  qdrant_service.py  rag_service.py
backend/app/infrastructure/repositories/: __init__.py  base.py  document_repository.py  user_repository.py
backend/app/models/: __init__.py  base.py  crawler.py  document.py  documents.py  user.py
backend/app/schemas/: __init__.py  common.py  crawl.py  files.py
backend/app/services/: __init__.py  auth_service.py  background_tasks.py  biwase_crawler.py  crawler.py  document_service.py  embedding_service.py  pdf_processor.py  qdrant_service.py  rag_service.py
backend/app/shared/: __init__.py  background_tasks.py  cache_service.py
backend/app/shared/utils/: __init__.py  datetime_utils.py  filesystem.py  health.py  metrics.py  retry.py  (+5 more)
backend/app/utils/: logger.py
backend/app/workers/: celery_app.py  tasks.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/tests/: README.md  __init__.py  conftest.py  test_auth_endpoints.py  test_biwase_crawler.py  test_crawl_endpoints.py  test_crawler.py  test_data_collection_pipeline.py  test_embedding_service.py  test_pdf_processor.py  test_qdrant_service.py
(+333 files in other folders)
