[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "alembic==1.12.1",
    "asyncio==3.4.3",
    "beautifulsoup4==4.12.2",
    "cachetools==5.3.2",
    "celery==5.3.4",
    "emails==0.6",
    "fastapi==0.104.1",
    "fastapi-cors==0.0.6",
    "httpx==0.25.2",
    "lxml==4.9.3",
    "markdown==3.5.1",
    "marker-pdf>=0.1.2",
    "numpy>=1.26.1,<2.0.0",
    "openai==1.3.8",
    "orjson==3.9.10",
    "pandas==2.1.4",
    "passlib[bcrypt]==1.7.4",
    "pathlib2==2.3.7",
    "pillow==10.1.0",
    "psutil==5.9.6",
    "pydantic==2.5.0",
    "pydantic-settings>=2.2.1",
    "pymupdf==1.23.8",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.6",
    "qdrant-client==1.7.0",
    "redis==5.0.1",
    "regex>=2024.4.28",
    "requests==2.31.0",
    "sentence-transformers==2.2.2",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.23",
    "structlog==23.2.0",
    "urllib3>=1.26.14,<2.0.0",
    "uvicorn[standard]==0.24.0",
]
